--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -16,27 +16,144 @@
  .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+ }
+
+ .header-name a {
+  color: #FAFAFA;
+  font-size: 16px;
+  text-decoration: none;
+ }
+
+ .create-room a {
+  border: 1px solid lightblue;
+  color: deepskyblue;
+  font-size: 10px;
+  text-decoration: none;
+  padding: 14px;
  }
 
  .rooms {
   height: calc(100vh - 100px);
   background-color: #2f3e51;
   padding: 0 20px;
+  overflow: scroll;
+ }
+
+ .room {
+  padding: 20px 0 40px;
+ }
+
+ .room-name a {
+  color: white;
+  text-decoration: none;
  }
 
  .chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+ }
+
+ .left-header {
+  padding: 36px 0;
+ }
+
+ .header-title {
+  color: #333;
+  font-size: 24px;
+ }
+
+ .header-btn {
+  margin-top: 40px;
+ }
+
+ .header-btn a{
+  color: darkred;
+  border: 1px solid darkred;
+  padding: 20px;
+  text-decoration: none;
  }
 
  .messages {
   height: calc(100vh - 100px - 90px);
   background-color: #FAFAFA;
   padding: 46px 40px 0;
+  overflow: scroll;
+ }
+
+ .message {
+  margin: 10px 0 0 0;
+ }
+
+ .upper-message {
+  display: flex;
+ }
+
+ .message-user {
+  color: #434A54;
+  font-size: 16px;
+ }
+
+ .message-date {
+  font-size: 12px;
+  color: #999;
+  padding-left: 10px;
+ }
+
+ .lower-message {
+  margin-top: 10px;
+ }
+
+ .message-content {
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
  }
 
  .form {
   height: 90px;
   background-color: #DDDDDD;
   padding: 20px 40px;
+  display: flex;
+ }
+
+ .form-input {
+  background-color: white;
+  display: flex;
+  width: 100%;
+ }
+
+ .form-message {
+  width: 100%;
+  height: 50px;
+  border: none;
+  padding: 0 10px;
+ }
+
+ .form-submit {
+  background-color: #38aef0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin: 0 15px 40px;
+  padding: 0 20px;
+ }
+ 
+ .form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+ }
+
+ .hidden {
+  display: none;
  }
