--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -10,7 +10,7 @@
   <% current_user.rooms.each do |room|%>
     <div class="room">
       <div class="room-name">
-        <a href="#"><%=room.name%></a>
+        <%= link_to room.name, room_messages_path(room)%>
       </div>
     </div>
   <% end %>
@@ -20,4 +20,3 @@
      <a href="#">techroom2</a>
    </div>
  </div>
-</div>
